--- a/style.css
+++ b/style.css
@@ -3,8 +3,8 @@ body {
     font-family: Arial, sans-serif;
     color: black;
     background-color: white;
-    margin: 0;
     padding: 0;
+    margin-right: 30px;
 }
 
 h1 {
